examples/compiler_errors/exposing/exposing_private_member.flx
// expect: compile_error
// expect-error: E420
// expect-error: E004

import ExposingTarget exposing (secret)

fn main() with IO {
    print(secret())
}
